[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ping-mesh"
version = "1.2.0"
description = "Ping Mesh - 网格化网络可达性测试工具，用于网络故障演练的多服务器并发 ping 测试"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sen", email = "sen@example.com"}
]
keywords = ["ping", "network", "testing", "mesh", "ssh", "monitoring", "reachability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "paramiko==4.0.0",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "reportlab>=4.0.0",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/nashen-netdev/ping-mesh"
Repository = "https://github.com/nashen-netdev/ping-mesh.git"
Documentation = "https://github.com/nashen-netdev/ping-mesh#readme"

[project.scripts]
ping-mesh = "ping_mesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.xlsx"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ping_mesh --cov-report=html --cov-report=term"

